Fixes for unit tests and bugs in sql logic